<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorActivityBack">
    <PreferenceCategory
        android:title="@string/show"
        android:widgetLayout="@style/TextAppearance.AppCompat.Title">
    <com.example.tanveerahmad.myapplication.settings
        android:title="Show"
        android:key="@string/pref_lang"
        android:defaultValue="arab,tam"
        android:summary="Select 2 languages" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/ara_ts"
        android:widgetLayout="@style/TextAppearance.AppCompat.Title">
        <com.example.tanveerahmad.myapplication.SeekBar1
            android:title="ArabSize"
            android:key="@string/pref_arab_size"
            android:defaultValue="6"
            android:summary="Select arabic text size" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/trans_ts"
        android:widgetLayout="@style/TextAppearance.AppCompat.Title">
        <com.example.tanveerahmad.myapplication.SeekBar1
            android:title="TransSize"
            android:key="@string/pref_trans_size"
            android:defaultValue="6"
            android:summary="Select translation text size" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preview"
        android:widgetLayout="@style/TextAppearance.AppCompat.Title">
        <com.example.tanveerahmad.myapplication.preview
            android:key="@string/pref_lang"
            android:summary="Select translation"/>
    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:title="@string/lang"-->
        <!--android:widgetLayout="@style/TextAppearance.AppCompat.Title">-->
        <!--//Language to be added here-->
        <!--<com.example.tanveerahmad.myapplication.AppLang-->
            <!--android:key="@string/pref_app_lang"-->
            <!--android:defaultValue="eng"-->
            <!--android:summary="Select App languages" />-->
    <!--</PreferenceCategory>-->


    <!--<com.example.tanveerahmad.myapplication.MoreInfo_text>-->
    <!--<intent-->
        <!--android:targetPackage="com.example.tanveerahmad.myapplication"-->
        <!--android:targetClass="com.example.tanveerahmad.myapplication.MoreInfo"-->
        <!--android:action="com.example.tanveerahmad.myapplication.pref_one" />-->
    <!--</com.example.tanveerahmad.myapplication.MoreInfo_text>-->

    <PreferenceScreen
        android:title="@string/moreinfo"
        >
        <!--<PreferenceCategory>-->
            <!--<com.example.tanveerahmad.myapplication.MoreInfo />-->
        <!--</PreferenceCategory>-->
        <intent android:action="example.action.ACTION_MORE_INFO">
        </intent>
    </PreferenceScreen>


</PreferenceScreen>
