<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/title_activity_settings"/>

    <item
        android:id="@+id/search_menu1"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />
    <!--app:actionViewClass="android.widget.SearchView"-->


    <item
        android:id="@+id/Goto"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/Goto"
        app:showAsAction="always"/>

<!--<item-->
    <!--android:id="@+id/info"-->
    <!--android:title="More Info"/>-->

<!--<item-->
    <!--android:id="@+id/bookmarks"-->
    <!--android:title="bookmarks"/>-->

</menu>