<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/widget_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:theme="@style/BlueAccent"
        >

        <!--<TextView-->
            <!--android:id="@+id/title"-->
            <!--style="@style/TextAppearance.AppCompat.Title"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:fontFamily="sans-serif-smallcaps"-->
            <!--android:padding="8dp"-->
            <!--android:text="Display Settings"-->
            <!--android:textSize="22dp" />-->

        <!--<TextView-->
            <!--android:id="@+id/summary"-->
            <!--style="@style/TextAppearance.AppCompat.Title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/title"-->
            <!--android:fontFamily="sans-serif-smallcaps"-->
            <!--android:paddingStart="8dp"-->
            <!--android:text="Show:"-->
            <!--android:textSize="18dp" />-->

        <CheckBox
            android:id="@+id/che1"
            android:shadowColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_centerHorizontal="true"
            android:text="@string/arab" />
        <!--android:layout_below="@+id/summary"-->

        <CheckBox
            android:id="@+id/che2"
            android:shadowColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/che1"
            android:layout_alignLeft="@id/che1"
            android:layout_below="@id/che1"
            android:text="@string/tam_trans" />

        <CheckBox
            android:id="@+id/che3"
            android:shadowColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/che2"
            android:layout_alignLeft="@id/che2"
            android:layout_below="@id/che2"
            android:text="@string/eng_trans" />


    </RelativeLayout>
</ScrollView>